force-app/main/default/objects/PDFTron_Template_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Mapping__c</fullName>
        <label>Mapping</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PDFTron Template Mapping</label>
    <pluralLabel>PDFTron Template Mappings</pluralLabel>
</CustomObject>